@@ -1,6 +1,15 @@
 # ChangeLog for media-sound/jack-audio-connection-kit
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/jack-audio-connection-kit/ChangeLog,v 1.101 2007/11/19 20:08:22 flameeyes Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/jack-audio-connection-kit/ChangeLog,v 1.103 2008/01/06 19:28:12 flameeyes Exp $
+
+  06 Jan 2008; Diego Pettenò <flameeyes@gentoo.org>
+  jack-audio-connection-kit-0.103.0.ebuild:
+  Add missing samplerate dependency (bug #202162) for netjack. Fix minor syns
+  in ebuilds.
+
+  06 Jan 2008; Diego Pettenò <flameeyes@gentoo.org>
+  jack-audio-connection-kit-0.99.0-r3.ebuild:
+  Remove all keywords but ~mips from 0.99.0-r3 version.
 
   19 Nov 2007; Diego Pettenò <flameeyes@gentoo.org>
   -files/jack-audio-connection-kit-0.80.0-alsalib-fix.patch,
